@@ -4,7 +4,7 @@
 
 ==================================================================
 
-1) Fedora official package (turnserver or coturn ? TBD).
+1) Fedora official package.
 
 2) MS Windows support.
 
@@ -90,7 +90,7 @@
 
 ==================================================================
 
-nope
+1) Peer for TCP relay.
 
 ==================================================================
 
